# pdaemon

./: CMakeLists.txt  FSE.h  FSE_ISA.txt  FSE_encode_decode.c  Makefile  common.c  common.h  main.c  nva3_pdaemon.fuc  pdaemon.fuc  proc_fan.c  proc_fan.h  proc_sysmon.c  proc_sysmon.h  process.c  process.h  regs.h  run.c  sched.c  sched.h
fucc-scripts/: boot.S  llvm2envyas.pl
